--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
 /* assets/css/style.css */
 body {
-  background-color: #FAEBD7; /* Replace #f0f0f0 with your desired color */
+  background-color: #F5F5DC; /* Replace #f0f0f0 with your desired color */
 }
