--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
 /* assets/css/style.css */
+<style>
 body {
   background-color: #F5F5DC; /* Replace #f0f0f0 with your desired color */
 }
+</style>
+Welcome to my portfolio page!
