--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,10 @@
-/* Custom styles */
+---
+---
+@import "{{ site.theme }}";
+
+/* Add custom font */
+@import url('https://fonts.googleapis.com/css2?family=Consolas&display=swap');
+
 body {
-  font-family: Consolas, Menlo, Monaco, "Courier New", monospace;
+  font-family: 'Consolas', monospace;
 }
-
-
