--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,3 +8,7 @@
 body {
   font-family: 'Consolas', monospace;
 }
+
+h1, h2, h3, h4, h5, h6, p, body {
+  font-family: 'Consolas', monospace !important;
+}
