--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 ---
 ---
-
+@import "{{ site.theme }}";
 /* Add custom font */
 @import url('https://fonts.googleapis.com/css2?family=Consolas&display=swap');
 
