--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,6 @@
 ---
 ---
-
-/* Import from the theme */
-@import "dracula";
-
+@import "{{ site.theme }}";
 /* Add your custom styles */
 body {
   font-family: 'Consolas', monospace !important;
