--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
-@import "{{ site.theme }}";
-/* Add your custom styles */
+
+/* Add your custom styles here */
 body {
   font-family: 'Consolas', monospace !important;
 }
