--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 ---
 ---
-
+@import "{{ site.theme }}";
 /* Add your custom styles here */
 body {
   font-family: 'Consolas', monospace !important;
