--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,12 +12,15 @@
   <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
   <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <!-- Link to Google Fonts for Consolas fallback -->
+  <link href="https://fonts.googleapis.com/css2?family=Consolas&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Consolas', monospace;
     }
   </style>
 </head>
+
 
 
   <body class="{{ page.colorspace }}">
